fixed organization url

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <inceptionYear>2016</inceptionYear>
     <organization>
         <name>ShitLib</name>
-        <url>https://shitlib.github.com/doc</url>
+        <url>https://shitlib.github.io</url>
     </organization>
 
     <build>
