--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.shitlib</groupId>
     <artifactId>shitlib-java</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>2</version>
     <packaging>jar</packaging>
 
     <name>ShitLib Java</name>
@@ -318,7 +318,7 @@
         <developerConnection>scm:git:git@github.com:${project.organization.name}/${project.artifactId}.git
         </developerConnection>
         <url>git@github.com:${project.organization.name}/${project.artifactId}.git</url>
-        <tag>HEAD</tag>
+        <tag>shitlib-java-2</tag>
     </scm>
 
     <issueManagement>
